# tjo-cloud-console

./: .gitignore  Cargo.toml  README.md  devbox.json  docker-compose.yaml  flake.nix  justfile  secrets.justfile  settings.yaml  shell.nix
.forgejo/workflows/: lint.yaml
examples/: postgresql.database.yaml  s3.bucket.yaml  s3.yaml
kubernetes/: console.yaml  crd.yaml  secret.sealed.yaml  secret.yaml.encrypted  secret.yaml.sha256sum
src/: context.rs  controller.rs  crdgen.rs  fixtures.rs  garage.rs  lib.rs  main.rs  metrics.rs  resources.rs  settings.rs  state.rs  telemetry.rs
src/resources/: postgresql.rs  s3.rs
src/resources/postgresql/: database.rs  user.rs
src/resources/s3/: bucket.rs  token.rs
yaml/: crd.yaml
