[package]
name = "console"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false
default-run = "console"
authors = ["mentos1386 <tine@tjo.space>"]

[[bin]]
doc = false
name = "console"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
# Actix
actix-web = "4"
# Kube
kube = { version = "2.0.1", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }

# Copypasta
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.25"
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-opentelemetry = "0.32.0"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", optional = true, default-features = false, features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
prometheus-client = "0.24.0"

# Copypasta
[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"
